Added integration tests for authentication controller